[project]
name = "meed"
version = "0.1.1"
description = "Email notifications for RSS/Atom feeds"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.11.0",
    "environs>=14.3.0",
    "feedparser>=6.0.12",
    "pydantic>=2.11.9",
    "sentry-sdk>=2.38.0",
]

[dependency-groups]
dev = [
    "ipython>=9.5.0",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
